--- a/Shooter.cbp
+++ b/Shooter.cbp
@@ -38,6 +38,20 @@
 		<Unit filename="Bala.h" />
 		<Unit filename="Enemy.cpp" />
 		<Unit filename="Enemy.h" />
+		<Unit filename="Enemy1.cpp" />
+		<Unit filename="Enemy1.h" />
+		<Unit filename="Enemy2.cpp" />
+		<Unit filename="Enemy2.h" />
+		<Unit filename="Enemy3.cpp" />
+		<Unit filename="Enemy3.h" />
+		<Unit filename="Enemy4.cpp" />
+		<Unit filename="Enemy4.h" />
+		<Unit filename="Enemy5.cpp" />
+		<Unit filename="Enemy5.h" />
+		<Unit filename="Enemy6.cpp" />
+		<Unit filename="Enemy6.h" />
+		<Unit filename="Enemy7.cpp" />
+		<Unit filename="Enemy7.h" />
 		<Unit filename="Player.cpp" />
 		<Unit filename="Player.h" />
 		<Unit filename="Timer.cpp" />
